# quira

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  VERSION.txt  build.md  symbols.md
core/: Cargo.toml
core/src/: backend.rs  bit.rs  circuit.rs  constant.rs  endian.rs  io.rs  job.rs  lib.rs  math.rs  ops.rs  prelude.rs  register.rs  result.rs  simulator.rs  state.rs  statevec.rs  types.rs
core/src/density/: entanglement.rs  entropies.rs  entropy.rs  matrix.rs  mod.rs
core/src/kernel/: mod.rs
core/src/kernel/density/: matrix.rs  mod.rs  state.rs
core/src/kernel/density/noise/: amp_damping.rs  dephasing.rs  depolarizing.rs  flip.rs  g_amp_damping.rs  ph_damping.rs  thermal_relax.rs
core/src/kernel/density/qinfo/: entanglement.rs  entropies.rs  mod.rs
core/src/kernel/statevec/: mod.rs  simulator.rs  statevec.rs  vecspace.rs
core/src/noise/: amp_damping.rs  dephasing.rs  depolarizing.rs  flip.rs  g_amp_damping.rs  mod.rs  model.rs  ph_damping.rs  thermal_relax.rs
core/src/noise/channel/: depolarizing.rs  mod.rs
core/src/operations/: mod.rs  single_qubit.rs
core/src/operations/single/: clifford.rs  mod.rs  non_clifford.rs  rotation.rs  special.rs  trivial.rs  universal.rs
core/src/operations/single_qubit/: clifford.rs  mod.rs  non_clifford.rs  parameterized.rs  special.rs  trivial.rs  universal.rs
core/src/operations/single_qubit/clifford/: h.rs  i.rs  mod.rs  s.rs  x.rs  y.rs  z.rs
core/src/operations/single_qubit/extra/: arbitrary.rs  gpi.rs  mod.rs  t.rs  u.rs
core/src/operations/single_qubit/parameterized/: mod.rs  rx.rs  rxy.rs  ry.rs  rz.rs  spherical.rs  un.rs
core/src/operations/two_qubit/: clifford.rs  mod.rs  non_clifford.rs  parameterized.rs  special.rs
core/src/operations/two_qubit/clifford/: cnot.rs  cy.rs  cz.rs  ecr.rs  mod.rs  swap.rs
core/src/operations/two_qubit/extra/: fsim.rs  mod.rs  msxx.rs  qsim.rs
core/src/operations/two_qubit/parameterized/: bogoliubov.rs  cp.rs  crx.rs  crxy.rs  mod.rs  pmi.rs  rotation.rs  spin.rs  vmsxx.rs  xy.rs
core/src/qstate/: mod.rs
core/src/qstate/cstab/: cstab.rs  mod.rs  pstring.rs
core/src/qstate/density/: matrix.rs  mod.rs
core/src/qstate/density/noise/: amp_damping.rs  dephasing.rs  flip.rs  g_amp_damping.rs  mod.rs  ph_damping.rs  readout_error.rs  thermal_relax.rs
core/src/qstate/density/qinfo/: distance.rs  entanglement.rs  entropies.rs
core/src/qstate/statevec/: mod.rs  statevec.rs
core/src/utils/: eigen.rs  mod.rs  ops.rs
examples/: CMakeLists.txt  bellstate.cpp  matrix_add.cpp  teleportation.cpp
include/quira/: circuit.hpp  constants.hpp  exception.hpp  gate.hpp  instruction.hpp  linalg.hpp  matrix.hpp  output.hpp  quira.hpp  register.hpp  types.hpp  unitary.hpp
include/quira/backend/: statevec.hpp
include/quira/gates/: multi.hpp  param.hpp  single.hpp  three.hpp  two.hpp
scripts/: build.sh
src/: exception.cpp  linalg.cpp  matrix.cpp  unitary.cpp
src/backend/: sim_out.cpp
src/backend/statevec/: backend.cpp  sim.cpp
src/circuit/: circuit.cpp  creg.cpp  instruction.cpp  measurement.cpp  qreg.cpp
src/gates/: multi.cpp  param.cpp  single.cpp  three.cpp  two.cpp
tests/: CMakeLists.txt  test_matrix.cpp
